Correct quotes around font and text-align

--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,14 @@
-  html {
-    box-sizing: border-box;
-    font-family: 'Merriweather', sans-serif;
-    line-height: 1.5;
-    color: #fff;
-  }
+html {
+  box-sizing: border-box;
+  font-family: "Merriweather", sans-serif;
+  line-height: 1.5;
+  color: #fff;
+  background-color: #fff;
+}
 
-  *, *::before, *::after {
-    box-sizing: inherit;
-  }
+*, *::before, *::after {
+  box-sizing: inherit;
+}
 
 h1 {
   font-size: 2rem;
@@ -21,7 +22,7 @@ body {
 }
 
 header {
-  background-color: #d05c2e
+  background-color: #d05c2e;
 }
 
 div {
@@ -57,6 +58,7 @@ ul a {
   color: #fff;
   display: block;
   padding: .4rem 0;
+  align-items: center;
   text-align: center;
 }
 
